--- a/package.json
+++ b/package.json
@@ -10,31 +10,37 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@mdi/font": "^3.2.89",
+    "instant-vuetify-overlays": "^1.2.5",
     "register-service-worker": "^1.5.2",
-    "vue": "^2.5.17",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1",
-    "vuetify": "^1.3.0",
+    "roboto-fontface": "^0.10.0",
+    "vue": "^2.5.18",
+    "vue-class-component": "^6.3.2",
+    "vue-property-decorator": "^7.2.0",
+    "vue-router": "^3.0.2",
+    "vuetify": "^1.3.12",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.0",
-    "@types/mocha": "^5.2.4",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.5",
     "@vue/cli-plugin-babel": "^3.2.0",
     "@vue/cli-plugin-e2e-cypress": "^3.2.0",
     "@vue/cli-plugin-pwa": "^3.2.0",
     "@vue/cli-plugin-typescript": "^3.2.0",
     "@vue/cli-plugin-unit-mocha": "^3.2.0",
     "@vue/cli-service": "^3.2.0",
-    "@vue/test-utils": "^1.0.0-beta.20",
-    "chai": "^4.1.2",
+    "@vue/test-utils": "^1.0.0-beta.26",
+    "chai": "^4.2.0",
+    "dotenv": "^6.2.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "typescript": "^3.0.0",
+    "typescript": "^3.2.2",
+    "uglifyjs-webpack-plugin": "^2.0.1",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-cli-plugin-vuetify": "^0.4.6",
-    "vue-template-compiler": "^2.5.17",
-    "vuetify-loader": "^1.0.5"
+    "vue-template-compiler": "^2.5.18",
+    "vuetify-loader": "^1.0.8",
+    "webpack": "^4.27.1"
   }
 }
