--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.6.3",
     "@mdi/font": "^3.3.92",
     "instant-vuetify-overlays": "^1.4.2",
     "register-service-worker": "^1.5.2",
