--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.6.3",
-    "@mdi/font": "^3.3.92",
-    "instant-vuetify-overlays": "^1.4.2",
+    "@fortawesome/fontawesome-free": "^5.7.0",
+    "@mdi/font": "^3.4.93",
+    "instant-vuetify-overlays": "^1.4.3",
     "register-service-worker": "^1.5.2",
     "roboto-fontface": "^0.10.0",
     "vue": "^2.5.22",
     "vue-class-component": "^6.3.2",
     "vue-property-decorator": "^7.3.0",
     "vue-router": "^3.0.2",
-    "vuetify": "^1.4.2",
-    "vuex": "^3.0.1"
+    "vuetify": "^1.4.3",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
@@ -30,17 +30,18 @@
     "@vue/cli-plugin-pwa": "^3.3.0",
     "@vue/cli-plugin-typescript": "^3.3.0",
     "@vue/cli-plugin-unit-mocha": "^3.3.0",
-    "@vue/cli-service": "^3.3.0",
+    "@vue/cli-service": "^3.3.1",
     "@vue/test-utils": "^1.0.0-beta.28",
     "chai": "^4.2.0",
     "dotenv": "^6.2.0",
+    "eslint": "^5.12.1",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "typescript": "^3.2.2",
+    "typescript": "^3.2.4",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-cli-plugin-vuetify": "^0.4.6",
     "vue-template-compiler": "^2.5.22",
-    "vuetify-loader": "^1.1.1",
-    "webpack": "^4.28.4"
+    "vuetify-loader": "^1.2.0",
+    "webpack": "^4.29.0"
   }
 }
