<master>[modified] add lodash

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/fontawesome-free": "^5.7.0",
     "@mdi/font": "^3.4.93",
     "instant-vuetify-overlays": "^1.4.3",
+    "loadash": "^1.0.0",
     "register-service-worker": "^1.5.2",
     "roboto-fontface": "^0.10.0",
     "vue": "^2.5.22",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
+    "@types/lodash": "^4.14.121",
     "@types/mocha": "^5.2.5",
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-e2e-cypress": "^3.3.0",
@@ -35,8 +37,8 @@
     "chai": "^4.2.0",
     "dotenv": "^6.2.0",
     "eslint": "^5.12.1",
-    "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "stylus": "^0.54.5",
     "typescript": "^3.2.4",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-cli-plugin-vuetify": "^0.4.6",
