--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fortawesome/fontawesome-free": "^5.7.2",
     "@mdi/font": "^3.4.93",
     "instant-vuetify-overlays": "^2.0.2",
-    "loadash": "^1.0.0",
+    "lodash": "^4.17.11",
     "register-service-worker": "^1.6.2",
     "roboto-fontface": "^0.10.0",
     "vue": "^2.6.6",
@@ -37,8 +37,8 @@
     "chai": "^4.2.0",
     "dotenv": "^6.2.0",
     "eslint": "^5.14.1",
-    "stylus-loader": "^3.0.2",
     "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "typescript": "^3.3.3",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-cli-plugin-vuetify": "^0.4.6",
