--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.7.2",
     "@mdi/font": "^3.5.95",
+    "exif-js": "^2.3.0",
     "instant-vuetify-overlays": "^2.0.5",
     "lodash": "^4.17.11",
     "register-service-worker": "^1.6.2",
