<master>[new file] e2e test framework 変更

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:e2e": "vue-cli-service test:e2e",
+    "test:e2e": "rm -rf ./tests/e2e/outputs/*; yarn codeceptjs run",
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
@@ -29,17 +29,19 @@
     "@types/lodash": "^4.14.122",
     "@types/mocha": "^5.2.6",
     "@vue/cli-plugin-babel": "^3.4.1",
-    "@vue/cli-plugin-e2e-cypress": "^3.4.1",
     "@vue/cli-plugin-pwa": "^3.4.1",
     "@vue/cli-plugin-typescript": "^3.4.1",
     "@vue/cli-plugin-unit-mocha": "^3.4.1",
     "@vue/cli-service": "^3.4.1",
     "@vue/test-utils": "^1.0.0-beta.29",
     "chai": "^4.2.0",
+    "codeceptjs": "^2.0.8",
     "dotenv": "^6.2.0",
     "eslint": "^5.15.1",
+    "puppeteer": "^1.13.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "ts-node": "^8.0.3",
     "typescript": "^3.3.3333",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-cli-plugin-vuetify": "^0.5.0",
