--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,5 +26,5 @@
         "tests/**/*.ts",
         "tests/**/*.tsx"
     ],
-    "exclude": [ "node_modules/**", "dist/**" ]
+    "exclude": [ "node_modules/**", "dist/**", "tests/**" ]
 }
