--- a/package.json
+++ b/package.json
@@ -25,22 +25,22 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
+    "@types/jest": "^23.1.4",
     "@types/lodash": "^4.14.123",
-    "@types/mocha": "^5.2.6",
     "@vue/cli-plugin-babel": "^3.5.3",
     "@vue/cli-plugin-pwa": "^3.5.1",
     "@vue/cli-plugin-typescript": "^3.5.3",
-    "@vue/cli-plugin-unit-mocha": "^3.5.1",
+    "@vue/cli-plugin-unit-jest": "^3.5.3",
     "@vue/cli-service": "^3.5.3",
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "chai": "^4.2.0",
+    "@vue/test-utils": "1.0.0-beta.29",
+    "babel-core": "7.0.0-bridge.0",
     "codeceptjs": "^2.0.8",
     "dotenv": "^7.0.0",
     "eslint": "^5.15.3",
     "puppeteer": "^1.13.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "ts-jest": "^23.0.0",
     "ts-node": "^8.0.3",
     "typescript": "^3.3.4000",
     "vue-cli-plugin-pug": "^1.0.7",
