--- a/package.json
+++ b/package.json
@@ -11,42 +11,43 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
-    "@mdi/font": "^3.5.95",
+    "@mdi/font": "^3.6.95",
     "exif-js": "^2.3.0",
     "instant-vuetify-overlays": "^2.0.5",
     "lodash": "^4.17.11",
+    "npm-check-updates": "^3.1.7",
     "register-service-worker": "^1.6.2",
     "roboto-fontface": "^0.10.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.1.0",
-    "vue-router": "^3.0.2",
-    "vuetify": "^1.5.7",
+    "vue-router": "^3.0.5",
+    "vuetify": "^1.5.11",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.4",
+    "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
-    "@vue/cli-plugin-babel": "^3.5.3",
-    "@vue/cli-plugin-pwa": "^3.5.1",
-    "@vue/cli-plugin-typescript": "^3.5.3",
-    "@vue/cli-plugin-unit-jest": "^3.5.3",
-    "@vue/cli-service": "^3.5.3",
+    "@vue/cli-plugin-babel": "^3.6.0",
+    "@vue/cli-plugin-pwa": "^3.6.0",
+    "@vue/cli-plugin-typescript": "^3.6.0",
+    "@vue/cli-plugin-unit-jest": "^3.6.0",
+    "@vue/cli-service": "^3.6.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "codeceptjs": "^2.0.8",
     "dotenv": "^7.0.0",
-    "eslint": "^5.15.3",
-    "puppeteer": "^1.13.0",
+    "eslint": "^5.16.0",
+    "puppeteer": "^1.14.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
-    "ts-jest": "^23.0.0",
-    "ts-node": "^8.0.3",
-    "typescript": "^3.3.4000",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.1.0",
+    "typescript": "^3.4.3",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-cli-plugin-vuetify": "^0.5.0",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.1",
-    "webpack": "^4.29.6"
+    "vuetify-loader": "^1.2.2",
+    "webpack": "^4.30.0"
   }
 }
