--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "test:e2e": "rm -rf ./tests/e2e/outputs/*; yarn codeceptjs run",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "create:view": "ts-node -r esm tools/create-vue/create_view.ts"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
