--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint",
     "test:e2e": "rm -rf ./tests/e2e/outputs/*; yarn codeceptjs run",
     "test:unit": "vue-cli-service test:unit",
-    "create:view": "ts-node -r esm tools/create-vue/create_view.ts"
+    "create:vue": "ts-node -r esm tools/create_vue",
+    "create:view": "ts-node -r esm tools/create_vue --type='view'",
+    "create:compo": "ts-node -r esm tools/create_vue --type='component'"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.8.1",
@@ -16,7 +18,6 @@
     "exif-js": "^2.3.0",
     "instant-vuetify-overlays": "^2.0.5",
     "lodash": "^4.17.11",
-    "npm-check-updates": "^3.1.7",
     "register-service-worker": "^1.6.2",
     "roboto-fontface": "^0.10.0",
     "vue": "^2.6.10",
@@ -27,6 +28,8 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
+    "@types/chalk": "^2.2.0",
+    "@types/change-case": "^2.3.1",
     "@types/jest": "^24.0.11",
     "@types/lodash": "^4.14.123",
     "@types/node": "^11.13.4",
@@ -37,6 +40,8 @@
     "@vue/cli-service": "^3.6.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
+    "chalk": "^2.4.2",
+    "change-case": "^3.1.0",
     "codeceptjs": "^2.0.8",
     "dotenv": "^7.0.0",
     "eslint": "^5.16.0",
