<master>[modified] env追加

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-NODE_ENV=development
+APP_NAME='APP'
+NODE_ENV='development'
 NODE_ENABLE_PWA=false
 
+export APP_NAME
 export NODE_ENV
 export NODE_ENABLE_PWA
