<master>[modified] install esm

--- a/package.json
+++ b/package.json
@@ -20,10 +20,10 @@
     "lodash": "^4.17.14",
     "register-service-worker": "^1.6.2",
     "roboto-fontface": "^0.10.0",
+    "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
     "vue-property-decorator": "^8.2.1",
     "vue-router": "^3.0.7",
-    "vue": "^2.6.10",
     "vuetify": "^1.5.16",
     "vuex": "^3.1.1"
   },
@@ -45,9 +45,10 @@
     "codeceptjs": "^2.2.0",
     "dotenv": "^8.0.0",
     "eslint": "^6.0.1",
+    "esm": "^3.2.25",
     "puppeteer": "^1.18.1",
-    "stylus-loader": "^3.0.2",
     "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "ts-jest": "^24.0.2",
     "ts-node": "^8.3.0",
     "typescript": "^3.5.3",
