--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "create:compo": "yarn ts-node -r esm tools/create_vue --type='component'"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.10.1",
-    "@mdi/font": "^4.0.96",
+    "@fortawesome/fontawesome-free": "^5.11.1",
+    "@mdi/font": "^4.4.95",
     "exif-js": "^2.3.0",
     "instant-vuetify-overlays": "^2.0.5",
     "lodash": "^4.17.15",
@@ -22,44 +22,44 @@
     "roboto-fontface": "^0.10.0",
     "vue": "^2.6.10",
     "vue-class-component": "^7.1.0",
-    "vue-property-decorator": "^8.2.1",
-    "vue-router": "^3.1.2",
-    "vuetify": "^2.0.7",
+    "vue-property-decorator": "^8.2.2",
+    "vue-router": "^3.1.3",
+    "vuetify": "^2.0.18",
     "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@types/change-case": "^2.3.1",
-    "@types/jest": "^24.0.17",
-    "@types/lodash": "^4.14.136",
-    "@types/node": "^12.7.2",
+    "@types/jest": "^24.0.18",
+    "@types/lodash": "^4.14.138",
+    "@types/node": "^12.7.5",
     "@types/yargs": "^13.0.2",
-    "@vue/cli-plugin-babel": "^3.10.0",
-    "@vue/cli-plugin-pwa": "^3.10.0",
-    "@vue/cli-plugin-typescript": "^3.10.0",
-    "@vue/cli-plugin-unit-jest": "^3.10.0",
-    "@vue/cli-service": "^3.10.0",
+    "@vue/cli-plugin-babel": "^4.0.0-rc.3",
+    "@vue/cli-plugin-pwa": "^4.0.0-rc.3",
+    "@vue/cli-plugin-typescript": "^4.0.0-rc.3",
+    "@vue/cli-plugin-unit-jest": "^4.0.0-rc.3",
+    "@vue/cli-service": "^4.0.0-rc.3",
     "@vue/test-utils": "1.0.0-beta.29",
     "babel-core": "7.0.0-bridge.0",
     "chalk": "^2.4.2",
     "change-case": "^3.1.0",
-    "codeceptjs": "^2.2.1",
-    "dotenv": "^8.0.0",
-    "eslint": "^6.1.0",
+    "codeceptjs": "^2.3.1",
+    "dotenv": "^8.1.0",
+    "eslint": "^6.4.0",
     "esm": "^3.2.25",
     "node-sass": "^4.12.0",
-    "puppeteer": "^1.19.0",
-    "sass": "^1.22.9",
-    "sass-loader": "^7.2.0",
-    "stylus": "^0.54.5",
+    "puppeteer": "^1.20.0",
+    "sass": "^1.22.12",
+    "sass-loader": "^8.0.0",
+    "stylus": "^0.54.7",
     "stylus-loader": "^3.0.2",
-    "ts-jest": "^24.0.2",
-    "ts-node": "^8.3.0",
-    "typescript": "^3.5.3",
+    "ts-jest": "^24.1.0",
+    "ts-node": "^8.4.1",
+    "typescript": "^3.6.3",
     "vue-cli-plugin-pug": "^1.0.7",
     "vue-cli-plugin-vuetify": "^0.6.3",
     "vue-template-compiler": "^2.6.10",
     "vuetify-loader": "^1.3.0",
-    "webpack": "^4.39.2",
-    "yargs": "^13.3.0"
+    "webpack": "^4.40.2",
+    "yargs": "^14.0.0"
   }
 }
