--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/change-case": "^2.3.1",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.138",
+    "@types/mkdirp": "^0.5.2",
     "@types/node": "^12.7.5",
     "@types/yargs": "^13.0.2",
     "@vue/cli-plugin-babel": "^4.0.0-rc.3",
@@ -46,6 +47,7 @@
     "dotenv": "^8.1.0",
     "eslint": "^6.4.0",
     "esm": "^3.2.25",
+    "mkdirp": "^0.5.1",
     "node-sass": "^4.12.0",
     "puppeteer": "^1.20.0",
     "sass": "^1.22.12",
